# ferris-file-sync

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml
migrations/: 20250329130219_create_onedrive_integrations_table.sql
src/: config.rs  main.rs
src/api/: mod.rs  routes.rs
src/db/: encryption.rs  migrations.rs  mod.rs  models.rs  onedrive.rs
src/messages/: mod.rs
src/onedrive/: mod.rs
test-data/: README.md
