[package]
name = "ferris-file-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = { version = "1.0.0", features = ["server"] }
tokio = { version = "1.44.1", features = ["full"] }

sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
