[package]
name = "ferris-file-sync"
version = "0.1.0"
edition = "2021"
description = "A microservice to sync files from S3 to Microsoft OneDrive"
authors = ["Jacob Lawson <jaibhavaya@gmail.com>"]

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# AWS SDK
aws-config = "1.1.5"
aws-sdk-s3 = "1.17.0"
aws-types = "1.1.5"
aws-sdk-sqs = "1.62.0"

# HTTP server framework
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
hyper = { version = "1.2.0", features = ["full"] }

# HTTP client for Microsoft Graph API
reqwest = { version = "0.12.15", features = ["json", "stream"] }

# Serialization/Deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Error handling
anyhow = "1.0.81"
thiserror = "2.0.12"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Configuration
config = "0.15.11"
dotenv = "0.15.0"

# CLI for testing in Phase 1
clap = { version = "4.5.2", features = ["derive"] }

# Utilities
bytes = "1.5.0"
futures = "0.3.30"
async-stream = "0.3.5"
sha2 = "0.10.8"  # For file integrity checking
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.13.1"
tokio-test = "0.4.3"
wiremock = "0.6.3"
